--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Obianuka Eze</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,16 +14,16 @@
 
 <body>
   <div class="Topcontainer">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I´m Micheal.</h1>
     <h2>I am a Web Developer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="">
-      <img class="profile-img" src="images/mike.png" alt="mike-img">
+      <img class="profile-img" src="mike.png" alt="mike-img">
       <h2>Hello.</h2>
       <p class="text"> Welcome to my personal webpage, Feel free to navigate around and get to know more about me,I am a student who is very excited and passionate about this journey to becoming a web developer.</p>
     </div>
@@ -31,12 +31,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="compt-img" src="images/computer.png" alt="compt-img">
+        <img class="compt-img" src="computer.png" alt="compt-img">
         <h3>Design and Web Development</h3>
         <p>After completing various design and Development courses on web programming, i am vastly knowlegeable and well skilled in these areas.</p>
       </div>
       <div class="skill-row">
-        <img class="chillies-img" src="images/chillies.png" alt="chillies-img">
+        <img class="chillies-img" src="chillies.png" alt="chillies-img">
         <h3>Cooking</h3>
         <p>Having worked as a fast food attendant for 3 years i devloped interest in cooking and went through the process of being a self taught chef.</p>
       </div>
